--- a/client/src/pages/admin/components/adminPageLayout/adminPageLayout.Module.scss
+++ b/client/src/pages/admin/components/adminPageLayout/adminPageLayout.Module.scss
@@ -17,8 +17,8 @@
     max-width: $container-width;
     flex: 1;
     background-color: $primary;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
     gap: 1rem;
   }
