--- a/client/src/pages/medic/home/home.Module.scss
+++ b/client/src/pages/medic/home/home.Module.scss
@@ -86,6 +86,10 @@
         gap: 0.5rem;
         align-items: center;
       }
+
+      .card__categories {
+        text-align: center;
+      }
     }
   }
 }
