multiple changes and implements

--- a/client/src/components/layout/header/header.Module.scss
+++ b/client/src/components/layout/header/header.Module.scss
@@ -110,6 +110,7 @@
       .header__link {
         cursor: pointer;
         font-weight: 500;
+        font-size: 0.75rem;
         transition: all 0.125s ease-out;
         user-select: none;
 
